# 0.0.45
# Switched to Wails instead of Fyne.
# Fyne relies on OpenGL and it was causing too many issues with my M1 Mac 😂😭😭
# Built new GUI scaffolding using wails.
# Ready to connect to Go backend.


# 0.0.44
# Added Apple script to open Keynote file, and launch in presenter view immediately
# Working on window handling, but Apple discontinued OpenGL and it's causing an error. Figuring out how to work around that.
# Trying to install GLFW/Vulkan. dev env issues 😪

# 0.0.43
# Stable version.
# Styled filelist to display better across all pages.
# Started working on client app

# 0.0.42 
# Client app opens file from local directory, when requested. Static link.
# Connected app to local dev database, fetching data and printing to console.
# Client GUI at a good state to begin adding functionality.

# 0.0.41
# Started working on Mac app.
# Super basic layout as I learn how to program a GUI in go 😳
# Close button works though 😎
# Layout taking better shape. Playing with NewSpacer() to format layout.
# Client app has basic GUI built. Functionality next.

# 0.0.40
# Added tailwinds CSS and tested that it works.
# Stripped CSS to begin implementing Tailwind
# Re-did BrowserRouter so that the Nav/Footer don't re-render when clicking between pages.
# Added basic page layout, using Tailwind.
# Finished Stripping leftover CSS that was left over.
# Re-styled layout back to a good standard, using Tailwind CSS.

# 0.0.39
# Started implement on Dashboard UI
# Added CC BY-NC-SA 4.0 International License
# Re-implemeted the API to fetch data from SQL DB to display on dashboard.

# 0.0.38
# Previous commit broke git.. testing things out again.
# github repo hotfix worked!
# Updated sessions UI to include file list, Functions not implemented yet.

# 0.037
# Forgot to log this version in here.
# It's documented inside the 'react-is' repo.

# 0.0.36
# Previously we used 'npm create-react-app' to get started developing.