@@ -15,7 +15,6 @@ function Session() {
     getSessions(room)
     
   }, [room])    
-  console.log(sessions)
   const updateSession = (result) =>setSession(result)
   function getSession(id){
     GetSession(id).then(updateSession)
@@ -30,6 +29,7 @@ function Session() {
     getSessions(e)
   }
   const handleSessionChange = (e, index)=>{
+    // n+1 problem potentially here :(
     if (0 <= index && index < sessions.length){
       setIndex(index)
       setSelectedSession(sessions[index].ID)       
@@ -38,13 +38,18 @@ function Session() {
     }
     getSession(selectedSession)
   }
+
+  // Need to add a handler, or adjust handleRoomChange()
+    // that the current session is set to the first presentation AND session are set when the room changes.
+    // Currently, the session is set by the back/next button on this Component
+
+  // Back/Next button are having a n+1 error here Zzzz
   return (
     <div>
       
         <div className='session'>
           <div>
-            <button onClick={(e)=>handleSessionChange(e, index-1)}>back</button>
-            {"    " + selectedSession + "    " }
+            <button onClick={(e)=>handleSessionChange(e, index-1)}>back</button>        
             <button onClick={(e)=>handleSessionChange(e, index+1)}>next</button>
 
           </div>
